# python_automation_hw_17

./: pyproject.toml
tests/: schemas.py  test_regres.py
