[project]
name = "python-automation-hw-17"
version = "0.1.0"
description = ""
authors = [
    {name = "Filipp Goncharenko",email = "phil.can@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "jsonschema (>=4.25.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
